--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start -p 3000",
+    "start:prod": "node start.js",
     "lint": "next lint"
   },
   "dependencies": {
