🚀 Docker 완전 제거 및 카페24 안전 배포 설정
- Dockerfile 완전 삭제 (카페24 자동 감지 차단)
- GitHub Actions에서 Docker 명령어 완전 제거
- .gitignore에 Docker 파일들 추가
- 카페24 전용 안전 배포 스크립트 생성 (cafe24-deploy.sh)
- package.json start 스크립트 환경변수 강제 설정
- 순수 Node.js 배포로 변경하여 포트 파싱 에러 해결

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Docker 관련 파일들 (카페24 자동 감지 방지)
+Dockerfile*
+.dockerignore
+docker-compose*.yml
+docker-compose*.yaml
