--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "NODE_ENV=production PORT=3000 next start -p 3000 -H 0.0.0.0",
     "start:prod": "node start.js",
+    "start:safe": "NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 next start -p 3000 -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
