feat: 자동 웹 루트 디렉토리 탐지 기능 추가 - 카페24 가상서버 경로 자동 감지

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,32 @@ jobs:
           password: ${{ secrets.CAFE24_PASSWORD }}
           port: ${{ secrets.CAFE24_PORT }}
           script: |
-            cd /home/hosting_users/${{ secrets.CAFE24_USERNAME }}/www
+            echo "🔍 웹 루트 디렉토리 탐지 중..."
+            
+            # 가능한 웹 루트 디렉토리들 탐지
+            if [ -d "/var/www/html" ]; then
+              WEB_ROOT="/var/www/html"
+              echo "✅ 웹 루트 발견: /var/www/html"
+            elif [ -d "/home/${{ secrets.CAFE24_USERNAME }}/www" ]; then
+              WEB_ROOT="/home/${{ secrets.CAFE24_USERNAME }}/www"
+              echo "✅ 웹 루트 발견: /home/${{ secrets.CAFE24_USERNAME }}/www"
+            elif [ -d "/home/hosting_users/${{ secrets.CAFE24_USERNAME }}/www" ]; then
+              WEB_ROOT="/home/hosting_users/${{ secrets.CAFE24_USERNAME }}/www"
+              echo "✅ 웹 루트 발견: /home/hosting_users/${{ secrets.CAFE24_USERNAME }}/www"
+            elif [ -d "/srv/www" ]; then
+              WEB_ROOT="/srv/www"
+              echo "✅ 웹 루트 발견: /srv/www"
+            else
+              echo "❌ 웹 루트 디렉토리를 찾을 수 없습니다."
+              echo "현재 위치: $(pwd)"
+              echo "디렉토리 목록:"
+              ls -la
+              exit 1
+            fi
+            
+            cd $WEB_ROOT
             echo "🚀 크레딧스토리 순수 Node.js 배포 시작..."
+            echo "📂 작업 디렉토리: $(pwd)"
 
             # Node.js 프로세스만 정리 (Docker 명령어 완전 제거)
             echo "🔄 기존 Node.js 프로세스 정리..."
