test: SSH 포트 22번으로 시도 - 카페24 기본 포트 테스트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           host: ${{ secrets.CAFE24_HOST }}
           username: ${{ secrets.CAFE24_USERNAME }}
           password: ${{ secrets.CAFE24_PASSWORD }}
-          port: ${{ secrets.CAFE24_PORT }}
+          port: 22
           script: |
             echo "🔍 웹 루트 디렉토리 탐지 중..."
             
