--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
           username: ${{ secrets.CAFE24_USERNAME }}
           password: ${{ secrets.CAFE24_PASSWORD }}
           port: ${{ secrets.CAFE24_PORT }}
+          debug: true
           script: |
             echo "🔍 현재 위치를 웹 루트로 사용합니다..."
             echo "📂 현재 위치: $(pwd)"
