feat: 서버 환경 진단 추가 - Git/Node.js/npm 설치상태 및 시스템 리소스 확인

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,33 @@ jobs:
           port: ${{ secrets.CAFE24_PORT }}
           debug: true
           script: |
-            echo "🔍 현재 위치를 웹 루트로 사용합니다..."
+            echo "🔍 서버 환경 확인 중..."
             echo "📂 현재 위치: $(pwd)"
             echo "📂 홈 디렉토리: $HOME"
-            echo "📋 디렉토리 목록:"
+            echo "👤 현재 사용자: $(whoami)"
+            echo "💻 운영체제: $(uname -a)"
+            
+            echo ""
+            echo "📋 설치된 도구 확인:"
+            echo "  - Git: $(git --version 2>/dev/null || echo '❌ 설치 안됨')"
+            echo "  - Node.js: $(node --version 2>/dev/null || echo '❌ 설치 안됨')"
+            echo "  - npm: $(npm --version 2>/dev/null || echo '❌ 설치 안됨')"
+            
+            echo ""
+            echo "💾 디스크 공간 확인:"
+            df -h
+            
+            echo ""
+            echo "📁 현재 디렉토리 내용:"
             ls -la
+            
+            echo ""
+            echo "🌐 네트워크 연결 테스트:"
+            ping -c 2 github.com 2>/dev/null || echo "❌ GitHub 연결 실패"
             
             # 현재 위치를 웹 루트로 사용
             WEB_ROOT=$(pwd)
+            echo ""
             echo "✅ 웹 루트 설정: $WEB_ROOT"
             echo "🚀 크레딧스토리 순수 Node.js 배포 시작..."
             echo "📂 작업 디렉토리: $(pwd)"
