--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,18 +35,20 @@ jobs:
           username: ${{ secrets.CAFE24_USERNAME }}
           password: ${{ secrets.CAFE24_PASSWORD }}
           port: ${{ secrets.CAFE24_PORT }}
+          timeout: 60s
+          command_timeout: 120s
+          debug: true
           script: |
             echo "🚀 빌드된 파일 배포 시작..."
             echo "📂 현재 위치: $(pwd)"
             
-            # 기존 프로세스 정리
+            # 기존 프로세스 정리 (간단하게)
             echo "🔄 기존 Node.js 프로세스 정리..."
-            pkill -f "node" 2>/dev/null || true
-            pkill -f "next" 2>/dev/null || true
-            pkill -f "npm" 2>/dev/null || true
-            pm2 kill 2>/dev/null || true
+            pkill -f "node.*3000" 2>/dev/null || echo "기존 node 프로세스 없음"
+            pkill -f "next.*start" 2>/dev/null || echo "기존 next 프로세스 없음"
             
             # 프로젝트 디렉토리 생성
+            echo "📁 프로젝트 디렉토리 생성..."
             mkdir -p /home/${{ secrets.CAFE24_USERNAME }}/credit-app
             cd /home/${{ secrets.CAFE24_USERNAME }}/credit-app
             
@@ -59,6 +61,7 @@ jobs:
           username: ${{ secrets.CAFE24_USERNAME }}
           password: ${{ secrets.CAFE24_PASSWORD }}
           port: ${{ secrets.CAFE24_PORT }}
+          timeout: 60s
           source: ".next,package.json,package-lock.json,public,next.config.ts"
           target: "/home/${{ secrets.CAFE24_USERNAME }}/credit-app/"
           
@@ -69,21 +72,26 @@ jobs:
           username: ${{ secrets.CAFE24_USERNAME }}
           password: ${{ secrets.CAFE24_PASSWORD }}
           port: ${{ secrets.CAFE24_PORT }}
+          timeout: 60s
+          command_timeout: 120s
+          debug: true
           script: |
             cd /home/${{ secrets.CAFE24_USERNAME }}/credit-app
             
             echo "📦 프로덕션 의존성 설치..."
-            npm ci --production
+            npm ci --production --silent
             
-            # 환경 변수 설정
+            # 환경 변수 파일 생성
             echo "🔧 환경 변수 설정..."
-            export NODE_ENV=production
-            export PORT=3000
-            export HOSTNAME=0.0.0.0
-            export NEXT_PUBLIC_SUPABASE_URL=https://jwstrrxoyikjyafhaeyo.supabase.co
-            export NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB3c3RycnhveWlranlhZmhhZXlvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNTIzMzMsImV4cCI6MjA2NzcyODMzM30.ZpfX0zp5pJ_pstXjRkYNg85FoFEIP4qV3Js4nhTeFDU
+            cat > .env.local << 'EOF'
+            NODE_ENV=production
+            PORT=3000
+            HOSTNAME=0.0.0.0
+            NEXT_PUBLIC_SUPABASE_URL=https://jwstrrxoyikjyafhaeyo.supabase.co
+            NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB3c3RycnhveWlranlhZmhhZXlvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNTIzMzMsImV4cCI6MjA2NzcyODMzM30.ZpfX0zp5pJ_pstXjRkYNg85FoFEIP4qV3Js4nhTeFDU
+            EOF
             
-            echo "✅ 환경 변수 설정 완료"
+            echo "✅ 환경 변수 파일 생성 완료"
             
             # 서버 시작
             echo "🚀 Next.js 서버 시작..."
@@ -93,11 +101,14 @@ jobs:
             echo "서버 PID: $SERVER_PID"
             
             # 서버 시작 확인
-            sleep 8
+            echo "⏳ 서버 시작 대기 중..."
+            sleep 5
             if ps -p $SERVER_PID > /dev/null 2>&1; then
               echo "✅ 배포 성공!"
-              echo "📝 서버 로그 (마지막 5줄):"
-              tail -5 /tmp/creditstory.log
+              echo "📝 서버 상태:"
+              echo "PID: $SERVER_PID"
+              echo "포트: 3000"
+              echo "로그 파일: /tmp/creditstory.log"
             else
               echo "❌ 서버 시작 실패. 로그:"
               cat /tmp/creditstory.log
