--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production PORT=3000 next start -p 3000 -H 0.0.0.0",
-    "start:prod": "node start.js",
-    "start:safe": "NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 next start -p 3000 -H 0.0.0.0",
+    "start": "NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 next start",
     "lint": "next lint"
   },
   "dependencies": {
