--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,73 +109,15 @@ jobs:
             echo "🧪 서버 시작 전 테스트..."
             npm list --depth=0 || echo "의존성 목록 출력 실패"
             
-            # 서버 시작
+            # 서버 시작 - 간단한 방법
             echo "🎯 서버 시작 중..."
             echo "방법 1: npm start 시도"
             npm start > /tmp/credit-app.log 2>&1 &
             NPM_PID=$!
             echo "npm start PID: $NPM_PID"
             
-            # 3초 대기 후 상태 확인
-            sleep 3
-            if ps -p $NPM_PID > /dev/null 2>&1; then
-              echo "✅ npm start 성공!"
-            else
-              echo "❌ npm start 실패. 직접 next start 시도..."
-              pkill -f npm || true
-              
-              # 직접 next start 실행
-              echo "방법 2: 직접 next start 시도"
-              NODE_ENV=production PORT=3000 HOSTNAME=0.0.0.0 ./node_modules/.bin/next start > /tmp/credit-app.log 2>&1 &
-              NEXT_PID=$!
-              echo "next start PID: $NEXT_PID"
-              
-              sleep 3
-              if ps -p $NEXT_PID > /dev/null 2>&1; then
-                echo "✅ next start 성공!"
-              else
-                echo "❌ next start도 실패. 노드 직접 실행 시도..."
-                pkill -f next || true
-                
-                # Node.js 직접 실행
-                echo "방법 3: Node.js 직접 실행"
-                cat > server.js << 'JSEOF'
-const { createServer } = require('http');
-const { parse } = require('url');
-const next = require('next');
-
-const dev = false;
-const hostname = '0.0.0.0';
-const port = 3000;
-
-const app = next({ dev, hostname, port });
-const handle = app.getRequestHandler();
-
-app.prepare().then(() => {
-  createServer(async (req, res) => {
-    try {
-      const parsedUrl = parse(req.url, true);
-      await handle(req, res, parsedUrl);
-    } catch (err) {
-      console.error('Error occurred handling', req.url, err);
-      res.statusCode = 500;
-      res.end('internal server error');
-    }
-  }).listen(port, (err) => {
-    if (err) throw err;
-    console.log(`> Ready on http://${hostname}:${port}`);
-  });
-});
-JSEOF
-                
-                node server.js > /tmp/credit-app.log 2>&1 &
-                NODE_PID=$!
-                echo "Node.js 직접 실행 PID: $NODE_PID"
-                sleep 3
-              fi
-            fi
-            
-            # 서버 로그 초기 확인
+            # 서버 시작 확인
+            sleep 5
             echo "📝 서버 시작 로그:"
             tail -10 /tmp/credit-app.log
             
@@ -188,14 +130,14 @@ JSEOF
             netstat -tln | grep 3000 || echo "포트 3000 사용 중 아님"
             
             # 최종 확인
-            sleep 5
+            sleep 3
             if pgrep -f "node.*3000" > /dev/null || pgrep -f "npm.*start" > /dev/null || pgrep -f "next.*start" > /dev/null; then
               echo "✅ 배포 성공!"
               echo "🌐 서버가 실행 중입니다."
               echo "📝 최종 로그:"
               tail -5 /tmp/credit-app.log
             else
-              echo "❌ 모든 시도 실패"
+              echo "❌ 서버 시작 실패"
               echo "📝 전체 로그:"
               cat /tmp/credit-app.log
               echo "🔍 최종 디버깅 정보:"
